force-app/main/default/objects/MUSW__Bluebeam_File_Setting__mdt/MUSW__Bluebeam_File_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configures the fields in the Bluebeam enabled file object (i.e. Submission) for use by the Bluebeam API</description>
    <label>Bluebeam File Setting</label>
    <pluralLabel>Bluebeam File Settings</pluralLabel>
</CustomObject>