force-app/main/default/objects/MUSW__Bluebeam_File_Setting__mdt/fields/MUSW__Bluebeam_Submission_Date_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Bluebeam_Submission_Date_API_Name__c</fullName>
    <description>The API name of the field that is updated when the submission file(s) is uploaded.</description>
    <inlineHelpText>The API name of the field that is updated when the submission file(s) is uploaded.</inlineHelpText>
    <label>Bluebeam_Submission Date API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>