force-app/main/default/objects/MUSW__Bluebeam_File_Setting__mdt/fields/MUSW__Filename_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Filename_Field_API_Name__c</fullName>
    <description>The API name of the field that is updated with the upload submission file names</description>
    <inlineHelpText>The API name of the field that is updated with the upload submission file names</inlineHelpText>
    <label>Filename Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>