force-app/main/default/objects/MUSW__Bluebeam_File_Setting__mdt/fields/MUSW__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Object_API_Name__c</fullName>
    <description>The unique name to use to filter for the relevant record</description>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>